--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
         user-select: none;
         width: 100vw;
         height: 100vh;
+        background-color: black;
       }
     </style>
     <title>React App</title>
